--- a/src/sass/includes/_classes.scss
+++ b/src/sass/includes/_classes.scss
@@ -1,7 +1,3 @@
-.text-center {
-  text-align: center;
-}
-
 .capital {
   text-transform: capitalize;
 }
